--- a/package.json
+++ b/package.json
@@ -17,5 +17,16 @@
   "bugs": {
     "url": "https://github.com/SirNathanJF/blogit/issues"
   },
-  "homepage": "https://github.com/SirNathanJF/blogit#readme"
+  "homepage": "https://github.com/SirNathanJF/blogit#readme",
+  "dependencies": {
+    "bcrypt": "^5.0.0",
+    "connect-session-sequelize": "^7.0.4",
+    "dotenv": "^8.2.0",
+    "ember-truth-helpers": "^3.0.0",
+    "express": "^4.17.1",
+    "express-handlebars": "^5.2.0",
+    "express-session": "^1.17.1",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.3.5"
+  }
 }
